# gators

./: .buildinfo  .coverage  .coveragerc  .gitignore  BingSiteAuth.xml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  _pyproject.toml  about.html  ac38  ac38_1  act_result  api_reference.html  codecov.yml  combined_cert.pem  examples.html  gators.clippers.html  gators.data_cleaning.html  gators.discretizers.html  gators.encoders.html  gators.feature_generation.html  gators.feature_generation_dt.html  gators.feature_generation_str.html  gators.feature_selection.html  gators.html  gators.imputers.html  gators.pipeline.html  gators.rules.html  gators.scalers.html  genindex.html  index.html  installation.html  modules.html  myproject.toml  objects.inv  (+21 more)
.github/codeql/: config.yml
.github/workflows/: auto-release.yml  build.yml  buildwheel.yml  codeql.yml  publish.yml
_modules/: index.html
_modules/sklearn/: base.html  pipeline.html
_sources/: about.rst.txt  api_reference.rst.txt  examples.rst.txt  gators.discretizers.rst.txt  gators.feature_generation.rst.txt  gators.feature_generation_dt.rst.txt  gators.feature_selection.rst.txt  gators.rst.txt  gators.rules.rst.txt  index.rst.txt  installation.rst.txt  quickstart.rst.txt
_sources/about_gators/: index.rst.txt
_sources/api/: clippers.rst.txt  data_cleaning.rst.txt  encoders.rst.txt  feature_generation_dt.rst.txt  pipeline.rst.txt  scalers.rst.txt
_sources/benchmarking/: fit_transform.rst.txt  index.rst.txt  transform_numpy.rst.txt
_sources/examples/: index.rst.txt  sf_crime.ipynb.txt  titanic_survival_prediction.ipynb.txt
_sources/getting_started/: 10min.ipynb.txt  install.rst.txt
_sources/reference/: binning.rst.txt  clipping.rst.txt  converter.rst.txt  data_cleaning.rst.txt  encoders.rst.txt  feature_generation.rst.txt  feature_generation_dt.rst.txt  feature_generation_str.rst.txt  feature_selection.rst.txt  imputers.rst.txt  model_building.rst.txt  pipeline.rst.txt  sampling.rst.txt  scalers.rst.txt  transformers.rst.txt
_sources/user_guide/: best_practices.rst.txt  data_cleaning.rst.txt  encoding.rst.txt  index.rst.txt  (+3 more)
_static/: documentation_options.js  gators.css
about_gators/: index.html
api/: clippers.html  data_cleaning.html  discretizers.html  encoders.html  feature_generation.html  feature_generation_dt.html  feature_generation_str.html  feature_selection.html  imputers.html  pipeline.html  scalers.html
benchmarking/: fit_transform.html  index.html  transform_numpy.html
benchmarks/: README.md  benchmark.ipynb  benchmark.py  benchmark_datetime_features_feature_engine.ipynb  benchmark_encoders.ipynb  benchmark_encoders_feature_engine.ipynb  benchmark_fit_transform.csv  benchmark_fit_transform.ipynb  benchmark_imputers.ipynb  benchmark_imputers_feature_engine.ipynb  benchmark_results.csv  benchmark_scalers.ipynb  benchmark_scalers_feature_engine.ipynb  benchmark_streamlined_approach.py  benchmark_transform_numpy.ipynb  generic_benchmark_plot.py
cov_html/: d_06c032577783e370_clipping_py.html  d_06c032577783e370_quantile_clipping_py.html  d_1c8eb3056721e0f7_supervised_sampling_py.html  d_1c8eb3056721e0f7_unsupervised_sampling_py.html  d_1cfcd38d8af35d51_iv_py.html  d_1cfcd38d8af35d51_util_py.html  d_2e7b559919172292__base_encoder_py.html  d_2e7b559919172292_binned_columns_encoder_py.html  d_2e7b559919172292_discretized_columns_encoder_py.html  d_2e7b559919172292_frequency_encoder_py.html  d_2e7b559919172292_multiclass_encoder_py.html  d_2e7b559919172292_onehot_encoder_py.html  d_2e7b559919172292_ordinal_encoder_py.html  d_2e7b559919172292_regression_encoder_py.html  d_2e7b559919172292_target_encoder_py.html  d_2e7b559919172292_woe_encoder_py.html  d_3136addfbdc92683_pipeline_py.html  d_3136addfbdc92683_test_pipeline_dd_py.html  d_603dd87602f86b7b__base_datetime_feature_py.html  d_603dd87602f86b7b_cyclic_day_of_month_py.html  d_603dd87602f86b7b_cyclic_day_of_week_py.html  d_603dd87602f86b7b_cyclic_hour_of_day_py.html  d_603dd87602f86b7b_cyclic_minute_of_hour_py.html  d_603dd87602f86b7b_cyclic_month_of_year_py.html  d_603dd87602f86b7b_delta_time_py.html  d_603dd87602f86b7b_ordinal_day_of_month_py.html  d_603dd87602f86b7b_ordinal_day_of_week_py.html  d_603dd87602f86b7b_ordinal_hour_of_day_py.html  d_603dd87602f86b7b_ordinal_minute_of_hour_py.html  d_603dd87602f86b7b_ordinal_month_of_year_py.html  d_6c98d578b789a2c0__base_string_feature_py.html  d_6c98d578b789a2c0_extract_py.html  d_6c98d578b789a2c0_lower_case_py.html  d_6c98d578b789a2c0_split_extract_py.html  d_6c98d578b789a2c0_string_contains_py.html  d_6c98d578b789a2c0_string_length_py.html  d_6c98d578b789a2c0_upper_case_py.html  d_77d5126526bda421__base_feature_selection_py.html  d_77d5126526bda421_correlation_filter_py.html  d_77d5126526bda421_information_value_py.html  (+146 more)
doc/: conf.py  index.rst
doc_data/: gators.pptx
docker/: dockerfile
docker_ppnb/: Dockerfile
docs/: .gitignore  README.md
examples/: 10min.ipynb  benchmarking_figures.ipynb  dummy_lgbm_model.txt  fraud_detection.html  fraud_detection.ipynb  house_price.html  house_price.ipynb  house_price_prediction.html  house_price_prediction.ipynb  index.html  libraries.html  libraries.ipynb  sf_crime.html  sf_crime.ipynb  sf_crime_classification.html  templates.html  templates.ipynb  titanic.html  titanic.ipynb  titanic_survival_prediction.html
gators/: __init__.py
gators.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
getting_started/: 10min.html  10min.ipynb  index.html  install.html
reference/: binning.html  clipping.html  converter.html  data_cleaning.html  encoders.html  feature_generation.html  feature_generation_dt.html  feature_generation_str.html  feature_selection.html  imputers.html  index.html  model_building.html  pipeline.html  sampling.html  scalers.html  transformers.html
user_guide/: best_practices.html  data_cleaning.html  encoding.html  feature_generation.html  house_price.html  house_price.ipynb  imputation.html  index.html  pipeline.html  scaling.html  sf_crime.html  sf_crime.ipynb  titanic.html
(+1294 files in other folders)
