[tool.poetry]
name = 'gators'
version = '0.1.0'
description = 'Streamline model building and productionization processes.'
authors = ['Simility Data Team']
readme = 'README.md'
include = ['*.so', '*.c']
keywords = ['machine learning']

[build-system]
requires = ['setuptools', 'wheel', 'numpy', 'Cython']
