[project]
name = "gators"
dynamic = ["version"]
description = "Machine learning library for streamlined model building and fast real-time preprocessing"
authors = [
    {name = "Charles Poli", email = "cpoli@paypal.com"},
    {name = "shreekanthadatta", email = "seligar@paypal.com"}
]
maintainers = [
    {name = "Charles Poli", email = "cpoli@paypal.com"},
    {name = "shreekanthadatta", email = "seligar@paypal.com"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = ["machine-learning", "preprocessing", "feature-engineering", "data-science", "polars", "pipeline", "transformers", "data-pipeline", "feature-selection", "sklearn", "feature_engine"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Jupyter",
    "Typing :: Typed",
]

dependencies = [
    "pandas>=2.3.0",
    "polars>=1.20.0",
    "pydantic>=2.12.0",
    "pyarrow>=24.0.0",
    "typing-extensions>=4.15.0",
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    "holidays>=0.92",
    "ipykernel>=7.2.0",
    "black>=26.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "coverage-badge>=1.1.0",
    "black==26.3.1",
    "isort==8.0.1",
    "Sphinx>=9.1.0",    
    "nbsphinx>=0.9.0",
    "pydata-sphinx-theme==0.17.1",
]
notebook = [
    "ipykernel>=7.2.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
]
all = ["gators[dev,notebook]"]

[project.urls]
Homepage = "https://github.com/paypal/Gators/"
Repository = "https://github.com/paypal/gators"
Documentation = "https://paypal.github.io/gators/"
"Bug Tracker" = "https://github.com/paypal/gators/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gators"]

[tool.hatch.build]
exclude = [
    "notebooks/",
    "gators/*/tests/",
    "data/",
    "doc_data/",
    "htmlcov/",
    "*.ipynb",
    "__pycache__/",
    "docs/"
]

[tool.hatch.version]
path = "gators/__init__.py"

# Black code formatter
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

# isort import sorter
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/tests/*", "*/data/*"]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["gators"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--cov=gators",
    "--cov-report=term-missing",
    "--cov-report=html",
]

# MyPy type checker
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "tests/",
    "notebooks/",
    "data/",
]

# Ruff linter (faster alternative to flake8, pylint)
[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "tests",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.coverage.run]
source = ["gators"]
omit = ["*/tests/*", "*/test_*.py", "benchmarks/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
